--- a/frontend/src/components/FinancialSection/FinancialSection.module.css
+++ b/frontend/src/components/FinancialSection/FinancialSection.module.css
@@ -1,4 +1,4 @@
-.Container {
+/* .Container {
     width: 100vw;
     color: black;
 }
@@ -65,16 +65,13 @@
     width: 377px;
     text-align: left;
     margin: 10px;
-    /* white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; */
 }
 
 .Value {
     text-align: right;
     margin: 10px;
     width: 100px;
-}
+} */
 
 /* LOADER */
 
@@ -102,11 +99,11 @@
 
 @media only screen and (max-width: 400px) {
     .Container {
-        width: 100%;
+        width: 100vw;
     }
     .FinancialSection {
         margin: 0 auto;
-        width: 100%;
+        width: 100vw;
         display: flex;
         height: auto;
         justify-content: center;
@@ -118,112 +115,42 @@
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
     }
     .Details {
-        width: 100%;
+        width: 100vw;
         margin: auto;
         text-align: left;
     }
     .Ticker {
         text-transform: uppercase;
         margin: 5px 0 0 10px;
-        font-size: 18pt;
+        font-size: 16pt;
     }
     .ReportType {
         text-transform: capitalize;
         line-height: 25px;
         margin: 0 0 0 10px;
-        font-size: 18pt;
+        font-size: 16pt;
     }
     .RoundNumbers {
         margin: 10px 0 5px 10px;
         font-style: italic;
-        font-weight: bold;
-        font-size: 9pt;
+        font-size: 8pt;
+        color: #777;
+        font-weight: lighter;
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        width: 100vw;
-        font-size: 9pt;
-    }
-    .FinancialRow:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-    .FinancialTable>.FinancialRow:nth-child(2) {
-        background-color: #1e1e1e;
-        color: #FFF;
-        width: auto;
-        font-weight: bold;
-        position: sticky;
-        position: -webkit-sticky;
-        top: 45px;
-        z-index: 1;
-    }
-    .Title {
-        width: 175px;
-        text-align: left;
-        margin: 9px;
-    }
-    .Value {
-        text-align: right;
-        margin: 9px;
-        width: auto;
-    }
-}
-
-@media only screen and (min-width: 401px) {
-    .Container {
-        width: 100%;
-    }
-    .FinancialSection {
-        margin: 0 auto;
-        width: 100%;
-        display: flex;
-        height: auto;
-        justify-content: flex-start;
         align-items: flex-start;
-        flex-direction: column;
-        position: relative;
-    }
-    .FinancialTable {
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    }
-    .Details {
-        width: 100%;
-        margin: auto;
-        text-align: left;
-    }
-    .Ticker {
-        text-transform: uppercase;
-        margin: 5px 0 0 10px;
-        font-size: 24pt;
-    }
-    .ReportType {
-        text-transform: capitalize;
-        line-height: 25px;
-        margin: 0 0 0 10px;
-        font-size: 24pt;
-    }
-    .RoundNumbers {
-        margin: 10px 0 5px 10px;
-        font-style: italic;
-        font-weight: bold;
-        font-size: 10pt;
-    }
-    .FinancialRow {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         width: 100vw;
-        font-size: 10pt;
+        font-size: 9pt;
     }
     .FinancialRow:nth-child(even) {
-        background-color: #f9f9f9;
+        background-color: #f5f5f5;
     }
     .FinancialTable>.FinancialRow:nth-child(2) {
         background-color: #1e1e1e;
         color: #FFF;
-        width: auto;
+        width: 100vw;
         font-weight: bold;
         position: sticky;
         position: -webkit-sticky;
@@ -242,34 +169,148 @@
     }
 }
 
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 401px) {
     .Container {
-        width: 100%;
+        width: 100vw;
     }
     .FinancialSection {
+        margin: 0 auto;
+        width: 100vw;
+        display: flex;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+    }
+    .FinancialTable {
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+    }
+    .Details {
+        width: 100vw;
+        margin: auto;
+        text-align: left;
+    }
+    .Ticker {
+        text-transform: uppercase;
+        margin: 5px 0 0 10px;
+        font-size: 20pt;
+    }
+    .ReportType {
+        text-transform: capitalize;
+        line-height: 25px;
+        margin: 0 0 0 10px;
+        font-size: 20pt;
+    }
+    .RoundNumbers {
+        margin: 10px 0 5px 10px;
+        font-style: italic;
+        font-size: 10pt;
+        color: #777;
+        font-weight: lighter;
+    }
+    .FinancialRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 100vw;
+        font-size: 10pt;
+    }
+    .FinancialRow:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+    .FinancialTable>.FinancialRow:nth-child(2) {
+        background-color: #1e1e1e;
+        color: #FFF;
+        width: 100vw;
+        font-weight: bold;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 45px;
+        z-index: 1;
+    }
+    .Title {
+        width: 200px;
+        text-align: left;
+        margin: 10px;
+    }
+    .Value {
+        text-align: right;
+        margin: 10px;
+        width: 100px;
+    }
+}
+
+@media only screen and (min-width: 525px) {
+    .Container {
         width: 500px;
+        margin: auto;
+    }
+    .FinancialSection {
+        margin: 0 auto;
+        width: 500px;
+        display: flex;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
     }
     .FinancialTable {
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
     }
     .Details {
         width: 500px;
+        margin: auto;
+        text-align: left;
     }
     .Ticker {
+        text-transform: uppercase;
+        margin: 5px 0 0 10px;
         font-size: 24pt;
     }
     .ReportType {
+        text-transform: capitalize;
+        line-height: 25px;
+        margin: 0 0 0 10px;
         font-size: 24pt;
     }
     .RoundNumbers {
-        font-size: 12pt;
+        margin: 10px 0 5px 10px;
+        font-style: italic;
+        font-size: 10pt;
+        color: #777;
+        font-weight: lighter;
     }
     .FinancialRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
         width: 500px;
         font-size: 12pt;
     }
+    .FinancialRow:nth-child(even) {
+        background-color: #f5f5f5;
+    }
     .FinancialTable>.FinancialRow:nth-child(2) {
+        background-color: #1e1e1e;
+        color: #FFF;
+        width: 500px;
+        font-weight: bold;
+        position: sticky;
+        position: -webkit-sticky;
         top: 45px;
+        z-index: 1;
+    }
+    .Title {
+        width: 250px;
+        text-align: left;
+        margin: 10px;
+    }
+    .Value {
+        text-align: right;
+        margin: 10px;
+        width: 100px;
     }
 }
 
@@ -311,19 +352,20 @@
     .RoundNumbers {
         margin: 10px 0 5px 10px;
         font-style: italic;
-        font-weight: bold;
-        font-size: 12pt;
+        font-size: 10pt;
+        color: #777;
+        font-weight: lighter;
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         width: 1366px;
         font-size: 12pt;
         padding: 8px
     }
     .FinancialRow:nth-child(even) {
-        background-color: #f9f9f9;
+        background-color: #f5f5f5;
     }
     .FinancialTable>.FinancialRow:nth-child(1) {
         background-color: #1e1e1e;
