--- a/frontend/src/components/ReportType/ReportType.module.css
+++ b/frontend/src/components/ReportType/ReportType.module.css
@@ -19,6 +19,7 @@
     margin-left: 5px;
     transition: 0.25s ease-in-out;
     font-size: 10pt;
+    height: 17px
 }
 
 .NavLink::after {
@@ -29,6 +30,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
+    border-radius: 5px;
     background-color: #000;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
