--- a/frontend/src/components/FinancialSection/FinancialSection.module.css
+++ b/frontend/src/components/FinancialSection/FinancialSection.module.css
@@ -111,9 +111,6 @@
         flex-direction: column;
         position: relative;
     }
-    .FinancialTable {
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    }
     .Details {
         width: 100vw;
         margin: auto;
@@ -140,7 +137,7 @@
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
         width: 100vw;
         font-size: 9pt;
     }
@@ -183,9 +180,6 @@
         flex-direction: column;
         position: relative;
     }
-    .FinancialTable {
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    }
     .Details {
         width: 100vw;
         margin: auto;
@@ -212,7 +206,7 @@
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
         width: 100vw;
         font-size: 10pt;
     }
@@ -256,9 +250,6 @@
         flex-direction: column;
         position: relative;
     }
-    .FinancialTable {
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    }
     .Details {
         width: 500px;
         margin: auto;
@@ -285,7 +276,7 @@
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
         width: 500px;
         font-size: 12pt;
     }
@@ -330,9 +321,6 @@
         flex-direction: column;
         position: relative;
     }
-    .FinancialTable {
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-    }
     .Details {
         width: 1366px;
         margin: auto;
@@ -359,10 +347,9 @@
     .FinancialRow {
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
         width: 1366px;
         font-size: 12pt;
-        padding: 8px
     }
     .FinancialRow:nth-child(even) {
         background-color: #f5f5f5;
