--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,13 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+
+}
+
+html {
+  overflow-x: hidden;
+
 }
 
 code {
