--- a/frontend/src/containers/CompanyStatsScreen/CompanyStatsScreen.module.css
+++ b/frontend/src/containers/CompanyStatsScreen/CompanyStatsScreen.module.css
@@ -39,6 +39,18 @@
     }
 }
 
+@media only screen and (min-width: 767px) {
+    .CompanyName {
+        margin: 0 0 10px 10px;
+        font-weight: bold;
+        font-size: 18pt;
+    }
+    .TickerDetails {
+        width: 767px;
+        margin: auto
+    }
+}
+
 @media only screen and (min-width: 1366px) {
     .CompanyName {
         margin: 0 0 10px 10px;
