--- a/frontend/src/components/StockChart/StockChart.module.css
+++ b/frontend/src/components/StockChart/StockChart.module.css
@@ -8,22 +8,22 @@
 
 @media only screen and (max-width: 400px) {
     .StockChart {
-        width: 300px;
-        height: 300px
+        width: 100%;
+        height: 200px
     }
 }
 
 @media only screen and (min-width: 401px) {
     .StockChart {
-        width: 400px;
-        height: 400px
+        width: 100%;
+        height: 300px
     }
 }
 
 @media only screen and (min-width: 500px) {
     .StockChart {
         width: 500px;
-        height: 300px
+        height: 400px
     }
 }
 
@@ -36,8 +36,7 @@
 
 @media only screen and (min-width: 1366px) {
     .StockChart {
-        width: 767px;
+        width: 1366px;
         height: 500px
     }
 }
-
