--- a/frontend/src/components/FinancialSection/FinancialSection.module.css
+++ b/frontend/src/components/FinancialSection/FinancialSection.module.css
@@ -1,78 +1,3 @@
-/* .Container {
-    width: 100vw;
-    color: black;
-}
-
-.FinancialSection {
-    margin: 0 auto;
-    width: 1366px;
-    display: flex;
-    height: auto;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: black;
-}
-
-.FinancialTable {
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-.Details {
-    width: 1366px;
-    margin: auto;
-    text-align: left;
-}
-
-.Ticker {
-    text-transform: uppercase;
-    margin: auto;
-}
-
-.ReportType {
-    text-transform: capitalize;
-    line-height: 25px;
-    margin: auto
-}
-
-.RoundNumbers {
-    margin: 10px 0 5px 0;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 10pt;
-}
-
-.FinancialRow {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 1366px;
-    font-size: 12pt;
-}
-
-.FinancialRow:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.FinancialTable>.FinancialRow:first-child {
-    background-color: #1e1e1e;
-    color: #FFF;
-    width: auto;
-    font-weight: bold;
-}
-
-.Title {
-    width: 377px;
-    text-align: left;
-    margin: 10px;
-}
-
-.Value {
-    text-align: right;
-    margin: 10px;
-    width: 100px;
-} */
-
 /* LOADER */
 
 @keyframes loader {
@@ -99,303 +24,366 @@
 
 @media only screen and (max-width: 400px) {
     .Container {
-        width: 100vw;
-    }
-    .FinancialSection {
-        margin: 0 auto;
-        width: 100vw;
-        display: flex;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100%
     }
     .Details {
         width: 100%;
-        margin: auto;
-        text-align: left;
     }
     .ReportType {
-        text-transform: capitalize;
-        font-size: 16pt;
-        margin: 10px;
+        margin: 10px 0 0 10px;
     }
     .RoundNumbers {
-        font-style: italic;
-        font-size: 10pt;
-        color: #777;
-        margin: 10px;
+        margin: 0 0 5px 10px;
+        color: #c0c0c0;
         font-weight: lighter;
+        font-style: italic;
+    }
+    .FinancialSection {
+        width: 100%;
+    }
+    .FinancialTable {
+        width: 100%
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100vw;
-        font-size: 9pt;
+        padding: 10px 0;
     }
-    .FinancialRow:nth-child(even) {
-        background-color: #f5f5f5;
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
-    .FinancialTable>.FinancialRow:nth-child(2) {
+
+    .Highlight {
         background-color: #1e1e1e;
-        color: #FFF;
-        width: 100vw;
-        font-weight: bold;
+        color: white;
+        font-weight: bolder;
     }
+
+    .Bold {
+        font-weight: bold; 
+        position: relative;       
+    }
+
+    .Bold::after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0; 
+        right: 0; 
+        bottom: 0;
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 93.75%;
+        height: 1px;
+        border-bottom: 1px solid #c5c5c5;
+        padding: 4px 0 0 0 0;
+    }
+
     .Title {
+        margin: 0 0 0 10px;
         width: 200px;
         text-align: left;
-        margin: 10px;
     }
     .Value {
-        text-align: right;
-        margin: 10px;
+        margin: 0 10px 0 0;
         width: 100px;
+        text-align: right;
     }
 }
 
 @media only screen and (min-width: 401px) {
     .Container {
-        width: 100vw;
-    }
-    .FinancialSection {
-        margin: 0 auto;
-        width: 100vw;
-        display: flex;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100%
     }
     .Details {
-        width: 100vw;
-        margin: auto;
-        text-align: left;
+        width: 100%;
     }
     .ReportType {
-        text-transform: capitalize;
-        font-size: 16pt;
-        margin: 10px;
+        margin: 10px 0 0 10px;
     }
     .RoundNumbers {
-        font-style: italic;
-        font-size: 10pt;
-        color: #777;
-        margin: 10px;
+        margin: 0 0 5px 10px;
+        color: #c0c0c0;
         font-weight: lighter;
+        font-style: italic;
+    }
+    .FinancialSection {
+        width: 100%;
+    }
+    .FinancialTable {
+        width: 100%
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100vw;
-        font-size: 10pt;
+        padding: 10px 0;
     }
-    .FinancialRow:nth-child(even) {
-        background-color: #f9f9f9;
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
-    .FinancialTable>.FinancialRow:nth-child(2) {
+
+    .Highlight {
         background-color: #1e1e1e;
-        color: #FFF;
-        width: 100vw;
-        font-weight: bold;
+        color: white;
+        font-weight: bolder;
     }
+
+    .Bold {
+        font-weight: bold; 
+        position: relative;       
+    }
+
+    .Bold::after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0; 
+        right: 0; 
+        bottom: 0;
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 93.75%;
+        height: 1px;
+        border-bottom: 1px solid #c5c5c5;
+        padding: 4px 0 0 0 0;
+    }
+
     .Title {
+        margin: 0 0 0 10px;
         width: 200px;
         text-align: left;
-        margin: 10px;
     }
     .Value {
-        text-align: right;
-        margin: 10px;
+        margin: 0 10px 0 0;
         width: 100px;
+        text-align: right;
     }
 }
 
 @media only screen and (min-width: 500px) {
     .Container {
-        width: 500px;
-        margin: auto;
-    }
-    .FinancialSection {
-        margin: auto;
-        width: 500px;
-        display: flex;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100%
     }
     .Details {
-        width: 500px;
-        margin: auto;
-        text-align: left;
+        width: 100%;
     }
     .ReportType {
-        text-transform: capitalize;
-        font-size: 18pt;
-        margin: 10px !important;
+        margin: 10px 0 0 10px;
     }
     .RoundNumbers {
-        font-style: italic;
-        font-size: 10pt;
-        color: #777;
-        margin: 10px;
+        margin: 0 0 5px 10px;
+        color: #c0c0c0;
         font-weight: lighter;
+        font-style: italic;
+    }
+    .FinancialSection {
+        width: 100%;
+    }
+    .FinancialTable {
+        width: 500px
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 500px;
-        font-size: 12pt;
+        padding: 10px 0;
     }
-    .FinancialRow:nth-child(even) {
-        background-color: #f5f5f5;
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
-    .FinancialTable>.FinancialRow:nth-child(2) {
+
+    .Highlight {
         background-color: #1e1e1e;
-        color: #FFF;
-        width: 500px;
-        font-weight: bold;
+        color: white;
+        font-weight: bolder;
     }
+
+    .Bold {
+        font-weight: bold; 
+        position: relative;       
+    }
+
+    .Bold::after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0; 
+        right: 0; 
+        bottom: 0;
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 480px;
+        height: 1px;
+        border-bottom: 1px solid #c5c5c5;
+        padding: 4px 0 0 0 0;
+    }
+
     .Title {
-        width: 250px;
+        margin: 0 0 0 10px;
+        width: 300px;
         text-align: left;
-        margin: 10px;
     }
     .Value {
-        text-align: right;
-        margin: 10px;
+        margin: 0 10px 0 0;
         width: 100px;
+        text-align: right;
     }
 }
 
 @media only screen and (min-width: 767px) {
     .Container {
-        color: black;
-        width: 100%;
-    }
-    .FinancialSection {
-        margin: 0 auto;
-        width: 767px;
-        color: black;
-        display: flex;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100%
     }
     .Details {
-        width: 767px;
-        margin: auto;
-        text-align: left;
+        width: 100%;
     }
     .ReportType {
-        text-transform: capitalize;
-        font-size: 18pt;
-        margin: 10px !important;
+        margin: 10px 0 0 10px;
     }
     .RoundNumbers {
-        font-style: italic;
-        font-size: 10pt;
-        color: #777;
-        margin: 10px;
+        margin: 0 0 5px 10px;
+        color: #c0c0c0;
         font-weight: lighter;
+        font-style: italic;
+    }
+    .FinancialSection {
+        width: 100%;
+    }
+    .FinancialTable {
+        width: 767px
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 767px;
-        font-size: 12pt;
+        padding: 10px 0;
     }
-    .FinancialRow:nth-child(even) {
-        background-color: #f5f5f5;
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
-    .FinancialTable>.FinancialRow:nth-child(2) {
+
+    .Highlight {
         background-color: #1e1e1e;
-        color: #FFF;
-        width: 767px;
-        font-weight: bold;
+        color: white;
+        font-weight: bolder;
     }
+
+    .Bold {
+        font-weight: bold; 
+        position: relative;       
+    }
+
+    .Bold::after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0; 
+        right: 0; 
+        bottom: 0;
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 747px;
+        height: 1px;
+        border-bottom: 1px solid #c5c5c5;
+        padding: 4px 0 0 0 0;
+    }
+
     .Title {
-        width: 377px;
+        margin: 0 0 0 10px;
+        width: 300px;
         text-align: left;
-        margin: 10px;
     }
     .Value {
-        text-align: right;
-        margin: 10px;
+        margin: 0 10px 0 0;
         width: 100px;
+        text-align: right;
     }
 }
 
 
 @media only screen and (min-width: 1366px) {
     .Container {
-        color: black;
-        width: 100%;
-    }
-    .FinancialSection {
-        margin: 0 auto;
-        width: 1366px;
-        color: black;
-        display: flex;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        width: 100%
     }
     .Details {
-        width: 1366px;
-        margin: auto;
-        text-align: left;
+        width: 100%;
     }
     .ReportType {
-        text-transform: capitalize;
-        font-size: 18pt;
-        margin: 10px !important;
+        margin: 10px 0 0 10px;
     }
     .RoundNumbers {
-        font-style: italic;
-        font-size: 10pt;
-        color: #777;
-        margin: 10px;
+        margin: 0 0 5px 10px;
+        color: #c0c0c0;
         font-weight: lighter;
+        font-style: italic;
+    }
+    .FinancialSection {
+        width: 100%;
+    }
+    .FinancialTable {
+        width: 1366px
     }
     .FinancialRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 1366px;
-        font-size: 12pt;
+        padding: 10px 0;
     }
-    .FinancialRow:nth-child(even) {
-        background-color: #f5f5f5;
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
-    .FinancialTable>.FinancialRow:nth-child(1) {
+
+    .Highlight {
         background-color: #1e1e1e;
-        color: #FFF;
-        width: auto;
-        font-weight: bold;
+        color: white;
+        font-weight: bolder;
     }
-    .FinancialTable>.FinancialRow:nth-child(2) {
-        background-color: #f9f9f9;
-        color: black;
-        width: auto;
-        font-weight: normal;
-        position: static;
+
+    .Bold {
+        font-weight: bold; 
+        position: relative;       
     }
+
+    .Bold::after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0; 
+        right: 0; 
+        bottom: 0;
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 1346px;
+        height: 1px;
+        border-bottom: 1px solid #c5c5c5;
+        padding: 4px 0 0 0 0;
+    }
+
     .Title {
-        width: 377px;
+        margin: 0 0 0 10px;
+        width: 300px;
         text-align: left;
-        margin: 10px;
     }
     .Value {
+        margin: 0 10px 0 0;
+        width: 150px;
         text-align: right;
-        margin: 10px;
-        width: 100px;
     }
 }
