fixed quotes endpoint fetching multiple API's

--- a/frontend/src/components/Quote/QuoteSection.module.css
+++ b/frontend/src/components/Quote/QuoteSection.module.css
@@ -111,7 +111,7 @@
         width: 1366px;
     }
     .Details {
-        width: 100%;
+        width: 1366px;
         margin: auto;
         text-align: left;
     }
