--- a/frontend/src/components/FairValueTable/FairValueTable.module.css
+++ b/frontend/src/components/FairValueTable/FairValueTable.module.css
@@ -28,9 +28,15 @@
     }
     .Details {
         width: 100%;
+        padding: 10px 10px 0 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
     .ReportType {
-        margin: 10px 0 0 10px;
+        margin: 0;
+        text-transform: capitalize;
     }
     .RoundNumbers {
         margin: 0 0 5px 10px;
@@ -77,7 +83,7 @@
         bottom: 0;
         margin-left: auto; 
         margin-right: auto; 
-        width: 93.75%;
+        width: 100%;
         height: 1px;
         border-bottom: 1px solid #c5c5c5;
         padding: 4px 0 0 0 0;
@@ -101,9 +107,15 @@
     }
     .Details {
         width: 100%;
+        padding: 10px 10px 0 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
     .ReportType {
-        margin: 10px 0 0 10px;
+        margin: 0;
+        text-transform: capitalize;
     }
     .RoundNumbers {
         margin: 0 0 5px 10px;
@@ -150,7 +162,7 @@
         bottom: 0;
         margin-left: auto; 
         margin-right: auto; 
-        width: 93.75%;
+        width: 100%;
         height: 1px;
         border-bottom: 1px solid #c5c5c5;
         padding: 4px 0 0 0 0;
@@ -174,9 +186,15 @@
     }
     .Details {
         width: 100%;
+        padding: 10px 10px 0 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
     .ReportType {
-        margin: 10px 0 0 10px;
+        text-transform: capitalize;
+        margin: 0;
     }
     .RoundNumbers {
         margin: 0 0 5px 10px;
@@ -223,7 +241,7 @@
         bottom: 0;
         margin-left: auto; 
         margin-right: auto; 
-        width: 480px;
+        width: 100%;
         height: 1px;
         border-bottom: 1px solid #c5c5c5;
         padding: 4px 0 0 0 0;
@@ -246,10 +264,16 @@
         width: 100%
     }
     .Details {
-        width: 100%;
+        width: calc(767px - 20px);
+        padding: 10px 10px 0 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
     }
     .ReportType {
-        margin: 10px 0 0 10px;
+        margin: 0;
+        text-transform: capitalize;
     }
     .RoundNumbers {
         margin: 0 0 5px 10px;
@@ -296,7 +320,7 @@
         bottom: 0;
         margin-left: auto; 
         margin-right: auto; 
-        width: 747px;
+        width: 100%;
         height: 1px;
         border-bottom: 1px solid #c5c5c5;
         padding: 4px 0 0 0 0;
@@ -320,10 +344,16 @@
         width: 100%
     }
     .Details {
-        width: 100%;
+        width: calc(1366px - 20px);
+        padding: 10px 10px 0 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
     }
     .ReportType {
-        margin: 10px 0 0 10px;
+        margin: 0;
+        text-transform: capitalize;
     }
     .RoundNumbers {
         margin: 0 0 5px 10px;
@@ -335,7 +365,7 @@
         width: 100%;
     }
     .FinancialTable {
-        width: 1366px
+        width: 767px
     }
     .FinancialRow {
         display: flex;
@@ -370,7 +400,7 @@
         bottom: 0;
         margin-left: auto; 
         margin-right: auto; 
-        width: 1346px;
+        width: 100%;
         height: 1px;
         border-bottom: 1px solid #c5c5c5;
         padding: 4px 0 0 0 0;
@@ -383,7 +413,7 @@
     }
     .Value {
         margin: 0 10px 0 0;
-        width: 150px;
+        width: 90px;
         text-align: right;
     }
 }
