--- a/frontend/src/components/FairValueTable/FairValueTable.module.css
+++ b/frontend/src/components/FairValueTable/FairValueTable.module.css
@@ -206,7 +206,7 @@
         width: 100%;
     }
     .FinancialTable {
-        width: 500px
+        width: 500px;
     }
     .FinancialRow {
         display: flex;
