--- a/frontend/src/components/GenericTable/GenericTable.module.css
+++ b/frontend/src/components/GenericTable/GenericTable.module.css
@@ -44,13 +44,13 @@
         font-weight: lighter;
         font-style: italic;
     }
-    .FinancialSection {
+    .GenericSection {
         width: 100%;
     }
-    .FinancialTable {
+    .GenericTable {
         width: 100%
     }
-    .FinancialRow {
+    .GenericRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -123,13 +123,13 @@
         font-weight: lighter;
         font-style: italic;
     }
-    .FinancialSection {
+    .GenericSection {
         width: 100%;
     }
-    .FinancialTable {
+    .GenericTable {
         width: 100%
     }
-    .FinancialRow {
+    .GenericRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -202,13 +202,13 @@
         font-weight: lighter;
         font-style: italic;
     }
-    .FinancialSection {
+    .GenericSection {
         width: 100%;
     }
-    .FinancialTable {
+    .GenericTable {
         width: 500px
     }
-    .FinancialRow {
+    .GenericRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -281,13 +281,13 @@
         font-weight: lighter;
         font-style: italic;
     }
-    .FinancialSection {
+    .GenericSection {
         width: 100%;
     }
-    .FinancialTable {
+    .GenericTable {
         width: 767px
     }
-    .FinancialRow {
+    .GenericRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -361,13 +361,13 @@
         font-weight: lighter;
         font-style: italic;
     }
-    .FinancialSection {
+    .GenericSection {
         width: 100%;
     }
-    .FinancialTable {
+    .GenericTable {
         width: 1366px
     }
-    .FinancialRow {
+    .GenericRow {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -413,7 +413,7 @@
     }
     .Value {
         margin: 0 10px 0 0;
-        width: 90px;
+        width: 150px;
         text-align: right;
     }
 }
