--- a/frontend/src/modules/FairValue/IntrinsicValueAnalyzer/IntrinsicValueAnalyzer.module.css
+++ b/frontend/src/modules/FairValue/IntrinsicValueAnalyzer/IntrinsicValueAnalyzer.module.css
@@ -23,23 +23,8 @@
 /* media queries */
 
 @media only screen and (max-width: 400px) {
-    
-}
-
-@media only screen and (min-width: 401px) {
-    
-}
-
-@media only screen and (min-width: 500px) {
-    
-}
-
-@media only screen and (min-width: 767px) {
-}
-
-@media only screen and (min-width: 1366px) {
     .ScenarioTable {
-        width: 678px
+        width: 100%px
     }
     .ScenarioRow {
         display: flex;
@@ -60,24 +45,74 @@
         font-weight: bolder;
     }
 
-    .Bold {
-        font-weight: bold; 
-        position: relative;       
+    .Title {
+        margin: 0 0 0 10px;
+        width: 100px;
+        text-align: left;
+    }
+    .Value {
+        margin: 0 10px 0 10px;
+        width: 90px;
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 401px) {
+    .ScenarioTable {
+        width: 100%px
+    }
+    .ScenarioRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
     }
 
-    .Bold::after {
-        content: "";
-        position: absolute;
-        display: block;
-        left: 0; 
-        right: 0; 
-        bottom: 0;
-        margin-left: auto; 
-        margin-right: auto; 
-        width: 100%;
-        height: 1px;
-        border-bottom: 1px solid #c5c5c5;
-        padding: 4px 0 0 0 0;
+    .Highlight {
+        background-color: #1e1e1e;
+        color: white;
+        font-weight: bolder;
+    }
+
+    .Title {
+        margin: 0 0 0 10px;
+        width: 100px;
+        text-align: left;
+    }
+    .Value {
+        margin: 0 10px 0 10px;
+        width: 90px;
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .ScenarioTable {
+        width: 500px
+    }
+    .ScenarioRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
+    }
+
+    .Highlight {
+        background-color: #1e1e1e;
+        color: white;
+        font-weight: bolder;
     }
 
     .Title {
@@ -86,7 +121,79 @@
         text-align: left;
     }
     .Value {
-        margin: 0 10px 0 0;
+        margin: 0 10px 0 10px;
+        width: 90px;
+        text-align: center;
+
+    }
+}
+
+@media only screen and (min-width: 767px) {
+    .ScenarioTable {
+        width: 767px
+    }
+    .ScenarioRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
+    }
+
+    .Highlight {
+        background-color: #1e1e1e;
+        color: white;
+        font-weight: bolder;
+    }
+
+    .Title {
+        margin: 0 0 0 10px;
+        width: 300px;
+        text-align: left;
+    }
+    .Value {
+        margin: 0 10px 0 10px;
+        width: 90px;
+        text-align: center;
+
+    }
+}
+
+@media only screen and (min-width: 1366px) {
+    .ScenarioTable {
+        width: 100%
+    }
+    .ScenarioRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 0;
+    }
+    .ValueRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 0;
+    }
+
+    .Highlight {
+        background-color: #1e1e1e;
+        color: white;
+        font-weight: bolder;
+    }
+
+    .Title {
+        margin: 0 0 0 10px;
+        width: 300px;
+        text-align: left;
+    }
+    .Value {
+        margin: 0 10px 0 10px;
         width: 90px;
         text-align: center;
 
